src/test/test-models/bad/stanc_helper.stan
parameters {
  real y;
}
model {
  y ~ ormal(0, 1);
}
